...
            android:layout_marginEnd="16dp"
            android:enabled="@{!vm.inProgress}"
            app:error="@{vm.usernameError}"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:maxLines="1"
                android:text="@={vm.username}" />

...
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp">

            <Button
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button.Colored"
                visible="@{!vm.inProgress}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="@{()->vm.loginClicked()}"
...
